--- a/demo.html
+++ b/demo.html
@@ -29,20 +29,20 @@
 		<a href="#" class="big-link" data-reveal-id="myModal">
 			Fade and Pop
 		</a>	
-		
-		<a href="#" class="big-link" data-reveal-id="myModal" data-animation="fade">
-			Fade
-		</a>
-		
-		<a href="#" class="big-link" data-reveal-id="myModal" data-animation="none">
-			None
-		</a>
 
 		<div id="myModal" class="reveal-modal">
 			<h1>Reveal Modal Goodness</h1>
-			<p>This is a default modal in all its glory, but any of the styles here can easily be changed in the CSS.</p>
+      <p>
+        This is a default modal in all its glory, but any of the styles here can easily be changed in the CSS.
+        <a href="#" data-reveal-id="myModal2">Open another</a>.
+      </p>
 			<a class="close-reveal-modal">&#215;</a>
 		</div>
 			
+		<div id="myModal2" class="reveal-modal">
+			<h1>A Second Modal</h1>
+			<p>This is a second modal that was opened from the first. When this is closed, you will be returned to the first one.</p>
+			<a class="close-reveal-modal">&#215;</a>
+		</div>
 	</body>
 </html>
